# RuMinus

./: .gitignore  README.md  columns.txt  data — kopia.txt  pyproject.toml  requirements.txt
src/ruminus_scraper/: main.py  main_web.py
