[project]
name = "ruminus-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "freesimplegui>=5.2.0.post1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.16",
]

[tool.setuptools.packages.find]
where = ["src"]
